<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/accueil"
        />
    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/search"
        android:title="@string/explorer"
        />
    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/iconplus"
        android:title="@string/don"
        />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/user"
        android:title="@string/profil"
      />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/settings"
        android:title="@string/param_tre"
        />
</menu>