<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="343dp"
                android:layout_height="180dp"
                android:background="@drawable/gradient_background"
                android:orientation="vertical"
                android:translationX="25dp"
                android:translationY="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/r_sum_des_dons"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"

                    >


                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="131dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/total_des_dons"
                    android:textColor="#000000"

                    >


                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="130dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/_500"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    android:textStyle="bold">


                </TextView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/coeur">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/_6_donations"
                        android:textColor="@color/black"
                        android:textSize="15sp">

                    </TextView>
                </LinearLayout>

            </LinearLayout>

            <Spinner
                android:id="@+id/spinner_association"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:background="@drawable/spinner_background"
                android:padding="8dp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:translationY="70dp" />


            <LinearLayout
                android:layout_width="359dp"
                android:layout_height="145dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="90dp"
                android:background="@drawable/rounded_background"
                android:clipToOutline="true"
                android:elevation="10dp"
                android:orientation="vertical">

                <!-- En-tête -->
                <LinearLayout
                    android:layout_width="400dp"
                    android:layout_height="40dp"
                    android:background="?attr/colorPrimaryVariant">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="100dp"
                        android:contentDescription="@string/calendrier"
                        android:src="@drawable/calendrier">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10sp"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/dons_par_ann_e"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:background="@color/white" />
                <!-- Tableau -->
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/colorSecondaryVariant">

                    <TableRow
                        android:background="?attr/colorPrimaryVariant"
                        android:divider="@color/white"
                        android:showDividers="middle">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_marginEnd="32dp"
                            android:padding="8dp"
                            android:text="@string/ann_e"
                            android:contentDescription="@string/ann_e"
                            android:textColor="@color/black"
                            />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/white" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:padding="8dp"
                            android:text="@string/nombre_de_dons"
                            android:contentDescription="@string/nombre_de_dons_par_ann_e"
                            android:textColor="@color/black"
                             />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:padding="8dp"
                            android:text="@string/montant_total"
                            android:contentDescription="@string/montant_total_par_ann_e"
                            android:textColor="@color/black"

                             />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:padding="8dp"
                            android:text="@string/_2024"
                            android:contentDescription="@string/ann_e_2024"/>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="?attr/colorPrimaryVariant" />

                        <TextView
                            android:padding="8dp"
                            android:text="@string/_4"
                            android:contentDescription="@string/_4_eme_dons_par_ann_ee_en_2024"/>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="?attr/colorPrimaryVariant" />

                        <TextView
                            android:padding="8dp"
                            android:text="@string/_170_00"
                            android:contentDescription="@string/_170_00"/>
                    </TableRow>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="1dp"
                        android:background="?attr/colorPrimaryVariant" />

                    <TableRow>

                        <TextView
                            android:padding="8dp"
                            android:text="@string/_2023"
                            android:contentDescription="@string/ann_e_2023"/>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="?attr/colorPrimaryVariant" />

                        <TextView
                            android:padding="8dp"
                            android:text="@string/_2"
                            android:contentDescription="@string/_2_eme_dons"/>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="?attr/colorPrimaryVariant" />

                        <TextView
                            android:padding="8dp"
                            android:text="@string/_100_00"
                            android:contentDescription="@string/_100_00"/>
                    </TableRow>

                </TableLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="359dp"
                android:layout_height="145dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/rounded_background"
                android:clipToOutline="true"
                android:elevation="10dp"
                android:orientation="vertical">

                <!-- En-tête -->
                <LinearLayout
                    android:layout_width="400dp"
                    android:layout_height="40dp"
                    android:background="?attr/colorPrimaryVariant">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="100dp"
                        android:src="@drawable/tourne">

                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10sp"
                        android:layout_marginTop="2dp"
                        android:gravity="center"
                        android:text="@string/dons_r_currents"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.6dp"
                    android:background="@color/white" />
                <!-- Tableau -->
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/colorSecondaryVariant">

                    <TableRow
                        android:background="?attr/colorPrimaryVariant"
                        android:divider="@color/white"
                        android:showDividers="middle">

                        <TextView

                            android:layout_width="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:padding="8dp"
                            android:text="@string/fr_quence"
                            android:textColor="@color/black"
                            />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/white" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:padding="8dp"
                            android:text="@string/nombre_de_dons"
                            android:textColor="@color/black"
                            android:contentDescription="@string/nombre_de_dons_r_currents"
                            />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="@color/white" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:padding="8dp"
                            android:text="@string/montant_total"
                            android:textColor="@color/black"
                           />
                    </TableRow>

                    <TableRow>

                        <TextView
                            android:padding="8dp"
                            android:text="@string/_2024"
                            android:contentDescription="@string/fr_quence_en_2024"/>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="?attr/colorPrimaryVariant" />

                        <TextView
                            android:padding="8dp"
                            android:text="@string/_4"
                            android:contentDescription="@string/_4_me_dons"/>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="?attr/colorPrimaryVariant" />

                        <TextView
                            android:padding="8dp"
                            android:text="@string/_170_00"
                            android:contentDescription="@string/_170_euros"/>
                    </TableRow>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="1dp"
                        android:background="?attr/colorPrimaryVariant" />

                    <TableRow>

                        <TextView
                            android:padding="8dp"
                            android:text="@string/_2023"
                            android:contentDescription="@string/fr_quence_en_2023"/>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="?attr/colorPrimaryVariant" />

                        <TextView
                            android:padding="8dp"
                            android:text="@string/_2"
                            android:contentDescription="@string/_2" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:background="?attr/colorPrimaryVariant" />

                        <TextView
                            android:padding="8dp"
                            android:text="@string/_100_00"
                            android:contentDescription="@string/_100_euros"/>
                    </TableRow>

                </TableLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        app:itemActiveIndicatorStyle="@drawable/hovernav"
        app:itemIconTint="@drawable/nav_item_color_state"
        app:itemTextColor="@drawable/nav_item_color_state"
        app:menu="@menu/menu" />
</RelativeLayout>